HP871X/HP871X/hp871x.h



ViStatus _VI_FUNC hp871x_power( 
	ViSession vi, 
		ViReal64 power,
		ViString request,
		ViInt32 channel,
		ViPReal64 cur_power);


ViStatus _VI_FUNC hp871x_frequency( 
	ViSession vi, 
		ViReal64 freq1,
		ViReal64 freq2,
		ViString request,
		ViInt32 channel,
		ViPReal64 cur_freq1,
		ViPReal64 cur_freq2);


ViStatus _VI_FUNC hp871x_points( 
	ViSession vi, 
		ViInt32 points,
		ViString request,
		ViInt32 channel,
		ViPInt32 cur_points);


ViStatus _VI_FUNC hp871x_average( 
	ViSession vi, 
		ViInt32 avg_set,
		ViString request,
		ViInt32 channel,
		ViPInt32 cur_avg);


ViStatus _VI_FUNC hp871x_trigger( 
	ViSession vi, 
		ViString request,
		ViInt32 channel,
		ViPInt32 trig_status);


ViStatus _VI_FUNC hp871x_measure( 
	ViSession vi, 
		ViString request,
		ViInt32 channel,
		ViPString cur_meas);


ViStatus _VI_FUNC hp871x_channel( 
	ViSession vi, 
		ViInt32 channel,
		ViString request,
		ViPInt32 chan_status);


ViStatus _VI_FUNC hp871x_bandwidth( 
	ViSession vi, 
		ViReal64 bandwidth,
		ViString request,
		ViInt32 channel,
		ViPReal64 cur_bw);


ViStatus _VI_FUNC hp871x_scale( 
	ViSession vi, 
		ViReal64 value,
		ViString request,
		ViInt32 channel,
		ViPReal64 cur_value);

	
ViStatus _VI_FUNC hp871x_format( 
	ViSession vi, 
		ViString request,
		ViInt32 channel,
		ViPString cur_format);


ViStatus _VI_FUNC hp871x_sweepTime( 
	ViSession vi, 
		ViReal64 swptime,
		ViString request,
		ViInt32 channel,
		ViPReal64 cur_sweep);


ViStatus _VI_FUNC hp871x_sweepAlt( 
	ViSession vi, 
		ViString request,
		ViPInt32 swpAlt_status);


ViStatus _VI_FUNC hp871x_powerSweep( 
	ViSession vi, 
		ViString request,
		ViReal64 pwrSwp_val1,
		ViReal64 pwrSwp_val2,
		ViInt32 channel,
		ViPReal64 cur_pwrSwp1,
		ViPReal64 cur_pwrSwp2);


ViStatus _VI_FUNC hp871x_markerSet( 
	ViSession vi, 
		ViString request,
		ViInt32 marker,
		ViReal64 mkr_val,
		ViInt32 channel);


ViStatus _VI_FUNC hp871x_markerRead( 
	ViSession vi, 
		ViPReal64 mkr_result,
		ViString request,
		ViInt32 marker,
		ViInt32 channel,
		ViPReal64 mkr_result2,
		ViPReal64 mkr_result3,
		ViPReal64 mkr_result4);


ViStatus _VI_FUNC hp871x_screen( 
        ViSession vi, 
		ViString request,
		ViPString screen_status);


ViStatus _VI_FUNC hp871x_triggerSource( 
	ViSession vi, 
		ViString request,
		ViPString trig_status);


ViStatus _VI_FUNC hp871x_display( 
	ViSession vi, 
		ViString request,
		ViInt32 channel);


ViStatus _VI_FUNC hp871x_message( 
	ViSession vi, 
		ViString request,
		ViString msg,
		ViPInt32 msg_status);


ViStatus _VI_FUNC hp871x_spurAvoid( 
	ViSession vi, 
		ViString request,
		ViPString spur_status);


ViStatus _VI_FUNC hp871x_softkey( 
	ViSession vi, 
		ViString key,
		ViInt32 sfky_number);


ViStatus _VI_FUNC hp871x_refOscillator( 
	ViSession vi, 
		ViString request,
		ViPInt32 refOsc_status);


ViStatus _VI_FUNC hp871x_title( 
	ViSession vi, 
		ViString request,
		ViString title,
		ViPInt32 title_status);


ViStatus _VI_FUNC hp871x_keyQueue( 
	ViSession vi, 
		ViString request,
		ViPInt32 queue_status);


ViStatus _VI_FUNC hp871x_keyRead( 
	ViSession vi, 
		ViPString keytype,
		ViPInt32 keycode);


ViStatus _VI_FUNC hp871x_autozero( 
	ViSession vi, 
		ViString request,
		ViPInt32 az_status);


ViStatus _VI_FUNC hp871x_calkit( 
	ViSession vi, 
		ViString request,
		ViInt32 port_num,
		ViPString cur_kit);


ViStatus _VI_FUNC hp871x_calMeasure( 
	ViSession vi, 
		ViString request,
		ViInt32 channel);


ViStatus _VI_FUNC hp871x_calType( 
	ViSession vi, 
		ViString request,
		ViInt32 channel);


ViStatus _VI_FUNC hp871x_calControl( 
	ViSession vi, 
		ViString request,
		ViInt32 channel,
		ViPString cal_type);


ViStatus _VI_FUNC hp871x_aperture( 
	ViSession vi,
		ViReal64 aperture,
		ViString request,
		ViInt32 channel,
		ViPReal64 cur_aperture);


ViStatus _VI_FUNC hp871x_takeSweep( 
	ViSession vi, 
		ViInt32 sweeps);


ViStatus _VI_FUNC hp871x_traceRead( 
	ViSession vi, 
		ViReal64 _VI_FAR traceRd[],
		ViString request,
		ViInt32 channel,
		ViReal64 _VI_FAR traceRd2[]);


ViStatus _VI_FUNC hp871x_traceAvgRead( 
	ViSession vi, 
		ViPReal64 trace_avg,
		ViInt32 channel);


ViStatus _VI_FUNC hp871x_userTTL( 
	ViSession vi, 
		ViString request,
		ViPString TTL_status);


ViStatus _VI_FUNC hp871x_Z0( 
	ViSession vi, 
		ViReal64 impedance,
		ViString request,
		ViPReal64 cur_imp);


ViStatus _VI_FUNC hp871x_labelsFreq( 
	ViSession vi, 
		ViString request,
		ViInt32 channel,
		ViPInt32 lblFreq_status);


ViStatus _VI_FUNC hp871x_labelsUser( 
	ViSession vi, 
		ViString request,
		ViReal64 lbl_value,
		ViString label,
		ViInt32 channel,
		ViPInt32 lblUser_status);


ViStatus _VI_FUNC hp871x_extensions( 
	ViSession vi, 
		ViString request,
		ViReal64 value,
		ViPReal64 cur_extension);


ViStatus _VI_FUNC hp871x_faultSetup( 
	ViSession vi, 
		ViString request,
		ViInt32 channel,
		ViPString cur_fltSetup);


ViStatus _VI_FUNC hp871x_faultMeas( 
	ViSession vi, 
		ViString request,
		ViReal64 fltMeas_value,
		ViInt32 channel,
		ViPReal64 cur_fltMeas);


ViStatus _VI_FUNC hp871x_faultCal( 
	ViSession vi, 
		ViString request,
		ViReal64 fltCal_value,
		ViInt32 channel,
		ViPReal64 cur_fltCal);


ViStatus _VI_FUNC hp871x_traceWrite( 
	ViSession vi, 
		ViReal64 _VI_FAR traceWr[],
		ViString request,               
		ViInt32 channel,
		ViReal64 _VI_FAR traceWr2[]);


ViStatus _VI_FUNC hp871x_multiport( 
	ViSession vi, 
		ViString request,
		ViInt32 mp1,
		ViInt32 mp2,
		ViInt32 channel,
		ViPInt32 cur_mp1,
		ViPInt32 cur_mp2);


ViStatus _VI_FUNC hp871x_print( 
	ViSession vi, 
		ViString request,
		ViString data,
		ViPString cur_print);


ViStatus _VI_FUNC hp871x_limits( 
	ViSession vi, 
		ViString request,
		ViInt32 channel,
		ViPInt32 limit_status);


ViStatus _VI_FUNC hp871x_limitSet( 
	ViSession vi, 
		ViInt32 segments,
        	ViReal64 _VI_FAR limits[],
		ViInt32 channel);


ViStatus _VI_FUNC hp871x_softkeyBegin( 
	ViSession vi, 
		ViString key,
		ViInt32 key_number);


ViStatus _VI_FUNC hp871x_dataPorts( 
	ViSession vi,
		ViInt32 port_data,
		ViString request,
		ViPInt32 cur_data);


ViStatus _VI_FUNC hp871x_beep( 
	ViSession vi, 
		ViString request);


ViStatus _VI_FUNC hp871x_memory( 
	ViSession vi, 
		ViString request,
		ViString name,
		ViString dest);


ViStatus _VI_FUNC hp871x_save( 
	ViSession vi, 
		ViString save_name,
		ViString request);


ViStatus _VI_FUNC hp871x_recall( 
	ViSession vi, 
		ViString recall_name,
		ViString request,
		ViPInt32 recall_status);


ViStatus _VI_FUNC hp871x_dir(
	ViSession vi,
		ViPInt32 files,
		ViPString dir,
		ViString drive);