HP871X/HP871X/hp871x.bas


Declare Function hp871x_power Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal power As Double, _
     Optional ByVal request As String = "LEVEL", _
     Optional ByVal channel As Long = 1, _
     Optional cur_power As Double = 0) As Long

Declare Function hp871x_frequency Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal freq1 As Double, _
     ByVal freq2 As Double, _
     Optional ByVal request As String = "S/S", _
     Optional ByVal channel As Long = 1, _
     Optional cur_freq1 As Double = 0, _
     Optional cur_freq2 As Double = 0) As Long

Declare Function hp871x_points Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal points As Long, _
     Optional ByVal request As String = "SET", _
     Optional ByVal channel As Long = 1, _
     Optional cur_points As Long = 0) As Long

Declare Function hp871x_average Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal avg_set As Long, _
     Optional ByVal request As String = "FACTOR", _
     Optional ByVal channel As Long = 1, _
     Optional cur_avg As Long = 0) As Long

Declare Function hp871x_trigger Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     Optional ByVal request As String = "IMMEDIATE", _
     Optional ByVal channel As Long = 1, _
     Optional trig_status As Long = 0) As Long

Declare Function hp871x_measure Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal channel As Long = 1, _
     Optional ByVal cur_meas As String = "") As Long

Declare Function hp871x_channel Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal channel As Long, _
     Optional ByVal request As String = "ON", _
     Optional chan_status As Long = 0) As Long
        
Declare Function hp871x_bandwidth Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal bandwidth As Double, _
     Optional ByVal request As String = "SET", _
     Optional ByVal channel As Long = 1, _
     Optional cur_bw As Double = 0) As Long

Declare Function hp871x_scale Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal value As Double, _
     Optional ByVal request As String = "SCALE", _
     Optional ByVal channel As Long = 1, _
     Optional cur_value As Double = 0) As Long

Declare Function hp871x_format Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal channel As Long = 1, _
     Optional ByVal cur_format As String = "") As Long

Declare Function hp871x_sweepTime Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal swptime As Double, _
     Optional ByVal request As String = "SET", _
     Optional ByVal channel As Long = 1, _
     Optional cur_sweep As Double = 0) As Long

Declare Function hp871x_sweepAlt Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional swpAlt_status As Long = 0) As Long

Declare Function hp871x_powerSweep Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal pwrSwp_val1 As Double = 0, _
     Optional ByVal pwrSwp_val2 As Double = 0, _
     Optional ByVal channel As Long = 1, _
     Optional cur_pwrSwp1 As Double = 0, _
     Optional cur_pwrSwp2 As Double = 0) As Long

Declare Function hp871x_markerSet Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     Optional ByVal request As String = "ON", _
     Optional ByVal marker As Long = 1, _
     Optional ByVal mkr_val As Double = 0, _
     Optional ByVal channel As Long = 1) As Long

Declare Function hp871x_markerRead Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     mkr_result As Double, _
     Optional ByVal request As String = "AMPL?", _
     Optional ByVal marker As Long = 1, _
     Optional ByVal channel As Long = 1, _
     Optional mkr_result2 As Double = 0, _
     Optional mkr_result3 As Double = 0, _
     Optional mkr_result4 As Double = 0) As Long

Declare Function hp871x_screen Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal screen_status As String = "") As Long

Declare Function hp871x_triggerSource Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal trig_status As String = "") As Long

Declare Function hp871x_display Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal channel As Long = 1) As Long

Declare Function hp871x_message Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     Optional ByVal request As String = "CLEAR", _
     Optional ByVal msg As String = "Message Not Specified", _
     Optional msg_status As Long = 0) As Long

Declare Function hp871x_spurAvoid Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal spur_status As String = "") As Long

Declare Function hp871x_softkey Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     Optional ByVal key As String = "ERASE_SOFTKEYS", _
     Optional ByVal sfky_number As Long = 0) As Long

Declare Function hp871x_refOscillator Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional refOsc_status As Long = 0) As Long

Declare Function hp871x_title Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal title As String = "Not Specified", _
     Optional title_status As Long = 0) As Long

Declare Function hp871x_keyQueue Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     Optional ByVal request As String = "CLEAR", _
     Optional queue_status As Long = 0) As Long

Declare Function hp871x_keyRead Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal keytype As String, _
     keycode As Long) As Long

Declare Function hp871x_autozero Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     Optional ByVal request As String = "ONCE", _
     Optional az_status As Long = 0) As Long

Declare Function hp871x_calkit Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal port_num As Long = 1, _
     Optional ByVal cur_kit As String = "") As Long

Declare Function hp871x_calMeasure Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal channel As Long = 1) As Long

Declare Function hp871x_calType Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal channel As Long = 1) As Long

Declare Function hp871x_calControl Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal channel As Long = 1, _
     Optional ByVal cal_type As String = "") As Long

Declare Function hp871x_aperture Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal aperture As Double, _
     Optional ByVal request As String = "SET", _
     Optional ByVal channel As Long = 1, _
     Optional cur_aperture As Double = 0) As Long

Declare Function hp871x_takeSweep Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     Optional ByVal sweeps As Long = 0) As Long

Declare Function hp871x_traceRead Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     trace As Double, _
     Optional ByVal request As String = "FDATA?", _
     Optional ByVal channel As Long = 1, _
     Optional trace2 As Double = 0) As Long

Declare Function hp871x_traceAvgRead Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     trace_avg As Double, _
     Optional ByVal channel As Long = 1) As Long

Declare Function hp871x_userTTL Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal TTL_status As String = "") As Long

Declare Function hp871x_Z0 Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal impedance As Double, _
     Optional ByVal request As String = "SYSTEM", _
     Optional cur_imp As Double = 0) As Long

Declare Function hp871x_labelsFreq Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal channel As Long = 1, _
     Optional lblFreq_status As Long = 0) As Long

Declare Function hp871x_labelsUser Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal lbl_value As Double = 0, _
     Optional ByVal label As String = "", _
     Optional ByVal channel As Long = 1, _
     Optional lblUser_status As Long = 0) As Long

Declare Function hp871x_extensions Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal value As Double = 0, _
     Optional cur_extension As Double = 0) As Long

Declare Function hp871x_faultSetup Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal channel As Long = 1, _
     Optional ByVal cur_fltSetup As String = "") As Long

Declare Function hp871x_faultMeas Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     ByVal fltMeas_value As Double, _
     Optional ByVal channel As Long = 1, _
     Optional cur_fltMeas As Double = 0) As Long

Declare Function hp871x_faultCal Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     ByVal request As String, _
     Optional ByVal fltCal_value As Double = 0, _
     Optional ByVal channel As Long = 1, _
     Optional cur_fltCal As Double = 0) As Long
 
Declare Function hp871x_traceWrite Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     trace As Double, _
     Optional ByVal request As String = "FDATA", _
     Optional ByVal channel As Long = 1, _
     Optional trace2 As Double) As Long

Declare Function hp871x_multiport Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal request As String, _
    Optional ByVal mp1 As Long = 1, _
    Optional ByVal mp2 As Long = 2, _
    Optional ByVal channel As Long = 1, _
    Optional cur_mp1 As Long = 0, _
    Optional cur_mp2 As Long = 0) As Long
    
Declare Function hp871x_print Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    Optional ByVal request As String = "PRINT", _
    Optional ByVal data As String = "", _
    Optional ByVal cur_print As String = "") As Long

Declare Function hp871x_limits Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal request As String, _
    Optional ByVal channel As Long = 1, _
    Optional limit_status As Long = 0) As Long

Declare Function hp871x_limitSet Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal segments As Long, _
    limits As Double, _
    Optional ByVal channel As Long = 1) As Long

Declare Function hp871x_softkeyBegin Lib "hp871x_32.dll" _
    (ByVal vi As Long, _
     Optional ByVal key As String = "ERASE_SOFTKEYS", _
     Optional ByVal key_number As Long = 0) As Long
    
Declare Function hp871x_dataPorts Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal port_data As Long, _
    ByVal request As String, _
    Optional cur_data As Long = 0) As Long

Declare Function hp871x_beep Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    Optional ByVal request As String = "DEFAULT") As Long

Declare Function hp871x_memory Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal request As String, _
    Optional ByVal name As String = "", _
    Optional ByVal dest As String = "") As Long

Declare Function hp871x_save Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal save_name As String, _
    Optional ByVal request As String = "STATE") As Long

Declare Function hp871x_recall Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    ByVal recall_name As String, _
    Optional ByVal request As String = "RECALL", _
    Optional recall_status As Long = 0) As Long

Declare Function hp871x_dir Lib "hp871x_32.dll" _
   (ByVal vi As Long, _
    files As Long, _
    ByVal dir As String, _
    Optional ByVal drive As String = "DEFAULT") As Long
